# agentic_auxilary

./: .gitignore  .mcp.json  .shellcheckrc  .taplo.toml  AGENTS.md  CLAUDE.md  Cargo.toml  ENG-758-ask-agent-pipe-deadlock.md  ENG-759-ask-agent-runtime-timeout.md  ENG-760-mcp-tool-cancellation-plumbing.md  ENG-761-agentic-mcp-stderr-logging.md  ENG-762-ask-agent-lifecycle-leak.md  LICENSE  Makefile  README.md  TODO.md  agentic-mcp-lifecycle-investigation.md  agentic.schema.json  agentic.toml.example  ask-agent-lifecycle-debug-plan.md  cliff.toml  deny.toml  justfile  mise.toml  opencode.json  release-plz.toml  rustfmt.toml  workflow.md
agentic-tools-core/: Cargo.toml
agentic-tools-core/src/: lib.rs  registry.rs  schema.rs
agentic-tools-core/src/providers/: anthropic.rs  mcp.rs  openai.rs
agentic-tools-mcp/: Cargo.toml  justfile
agentic-tools-mcp/src/: server.rs
agentic_logging/: CHANGELOG.md  Cargo.toml
agentic_logging/src/: lib.rs
anthropic_async/examples/07-streaming-tools/: Cargo.toml
anthropic_client/: Cargo.toml  Makefile  README.md
anthropic_client/examples/01-basic-completion/: Cargo.toml
anthropic_client/examples/04-model-listing/: Cargo.toml
anthropic_client/examples/05-kitchen-sink/: Cargo.toml
anthropic_client/src/: client.rs  config.rs  error.rs  lib.rs  retry.rs  sse.rs
anthropic_client/src/resources/: mod.rs  models.rs
anthropic_client/src/types/: common.rs  messages.rs  mod.rs  models.rs
anthropic_client/tests/: beta_header.rs  count_tokens.rs  messages_create.rs  models.rs  retry.rs  streaming_compile.rs
apps/agentic/: CHANGELOG.md  CLAUDE.md  Cargo.toml
apps/agentic-mcp/: CHANGELOG.md  CLAUDE.md  Cargo.toml
apps/agentic-mcp/src/: main.rs
apps/agentic-mcp/tests/: stderr_logging.rs
apps/agentic-outer-dag/: CHANGELOG.md  CLAUDE.md  Cargo.toml
apps/agentic-outer-dag/src/: cli.rs  main.rs  preview.rs  test_support.rs
apps/agentic/src/: main.rs
apps/agentic/tests/: config_commands.rs
apps/message-optimizer/: CHANGELOG.md  CLAUDE.md  Cargo.toml
apps/message-optimizer/src/: main.rs
apps/message-optimizer/tests/: cli_smoke.rs
apps/opencode-orchestrator-mcp/: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  justfile
apps/opencode-orchestrator-mcp/src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  server.rs  token_tracker.rs  tools.rs  types.rs  version.rs
apps/opencode-orchestrator-mcp/tests/: activity_timeout_wiremock.rs  cancellation_wiremock.rs  command_filtering_wiremock.rs  fast_idle_race_wiremock.rs  integration.rs  list_tools_wiremock.rs  permission_flow_wiremock.rs  question_flow_wiremock.rs  recovery_wiremock.rs
apps/review-agent-mcp/: CLAUDE.md  Cargo.toml  justfile
apps/review-agent-mcp/src/: lib.rs  main.rs  prompts.rs  tools.rs  types.rs  validation.rs
apps/review-agent-mcp/tests/: validation.rs
apps/thoughts/: CHANGELOG.md  CLAUDE.md  Cargo.toml
apps/thoughts/src/: main.rs
apps/thoughts/tests/: init_idempotency.rs  mcp_stdout_cleanliness.rs  support.rs  sync_exit_status.rs  worktree_test.rs
claude/claude-auth/: Cargo.toml
claude/claude-auth/src/: api_key.rs  callback.rs  error.rs  lib.rs  oauth.rs  pkce.rs  provider.rs  store.rs
claude/claude-core/: Cargo.toml
claude/claude-core/src/: amortize.rs  async_utils.rs  controller.rs  database.rs  lib.rs  plugin.rs  repository.rs  snapshot.rs  state.rs  vec_mutation.rs
claude/claude-ui-makepad/: Cargo.toml
claudecode_rs/: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md
claudecode_rs/examples/: basic.rs  mcp.rs  streaming.rs  streaming_debug.rs
claudecode_rs/hack/: cargo-smart.sh
claudecode_rs/src/: client.rs  config.rs  error.rs  lib.rs  probe.rs  process.rs  session.rs  stream.rs  types.rs
claudecode_rs/tests/: integration.rs
coding_agent_tools/: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  clippy.toml
coding_agent_tools/hack/: cargo-smart.sh
coding_agent_tools/src/: glob.rs  grep.rs  lib.rs  logging.rs  main.rs  pagination.rs  paths.rs  types.rs  walker.rs
coding_agent_tools/tests/: glob_tests.rs  grep_tests.rs  ls_tests.rs  mcp_stdout_cleanliness.rs  tilde_paths.rs
docs/: auth.md  (+5 more)
gpt5_reasoner/: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md
gpt5_reasoner/examples/: directories.json  print_schema.rs  test_files.json
gpt5_reasoner/hack/: cargo-smart.sh
gpt5_reasoner/src/: client.rs  errors.rs  lib.rs  logging.rs  main.rs  test_support.rs  token.rs  types.rs
gpt5_reasoner/tests/: integration_logging.rs
linear_tools/linear-queries/: Cargo.toml
linear_tools/linear-schema/: Cargo.toml  build.rs
linear_tools/linear-tools/: Cargo.toml
opencode_rs/: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  justfile
opencode_rs/examples/: basic.rs  full_workflow.rs  managed_server.rs  streaming.rs
opencode_rs/src/: cli.rs  client.rs  error.rs  server.rs  sse.rs
opencode_rs/tests/: integration.rs
pr_comments/: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md
pr_comments/hack/: cargo-smart.sh
pr_comments/src/: git.rs  github.rs  lib.rs  main.rs  models.rs  pagination.rs  tools.rs
pr_comments/tests/: integration.rs  mcp_stdout_cleanliness.rs
thoughts_tool/: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  MIGRATION_V1_TO_V2.md  Makefile  README.md
thoughts_tool/hack/: cargo-smart.sh
thoughts_tool/src/: error.rs  lib.rs  main.rs
thoughts_tool/tests/: branch_protection.rs  config_integration.rs  git_clone_gitoxide.rs  git_edge_cases.rs  git_fetch_gitoxide.rs  git_push_shell.rs  git_shell_fetch.rs  git_sync_worktree.rs  init_claude_permissions.rs  init_idempotency.rs  migration_v1_to_v2.rs  mount_integration.rs  worktree_test.rs
universal_tool/: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  justfile
universal_tool/docs/: MIGRATION.md
universal_tool/hack/: run-silent.sh
universal_tool/universal-tool-core/: Cargo.toml
universal_tool/universal-tool-integration-tests/: Cargo.toml
universal_tool/universal-tool-macros/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs  makefile.rs  marker.rs
xtask/tests/: markers.rs
(+968 files in other folders)
