[workspace]
resolver = "2"
members = [
    "thoughts_tool",
    "claudecode_rs",
    "opencode_rs",
    "universal_tool/universal-tool-core",
    "universal_tool/universal-tool-macros",
    "universal_tool/universal-tool-integration-tests",
    "pr_comments",
    "gpt5_reasoner",
    "xtask",
    "anthropic_async",
    "coding_agent_tools",
    # Linear tools crates
    "linear_tools/linear-schema",
    "linear_tools/linear-queries",
    "linear_tools/linear-tools",
]
exclude = [
    "universal_tool/examples",
]

[workspace.dependencies]
# Shared core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.29.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
# Note: Windows is explicitly not supported
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Build only the required packages, and individually
precise-builds = true
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# Allow custom modifications to release.yml
allow-dirty = ["ci"]
