[workspace]
resolver = "2"
members = [
    # Apps
    "apps/thoughts",
    "apps/agentic-mcp",

    # Bindings
    "bindings/node/agentic-tools-napi",

    # Agentic-tools family
    "crates/agentic-tools/core",
    "crates/agentic-tools/macros",
    "crates/agentic-tools/mcp",
    "crates/agentic-tools/utils",
    "crates/agentic-tools/registry",

    # Linear family
    "crates/linear/schema",
    "crates/linear/queries",
    "crates/linear/tools",

    # Services family
    "crates/services/anthropic-async",
    "crates/services/claudecode-rs",
    "crates/services/opencode-rs",

    # Tools family
    "crates/tools/coding-agent-tools",
    "crates/tools/pr-comments",
    "crates/tools/gpt5-reasoner",
    "crates/tools/thoughts-mcp-tools",

    # Infra family
    "crates/infra/agentic-logging",
    "crates/infra/thoughts-core",

    # Legacy family
    "crates/legacy/universal-tool-core",
    "crates/legacy/universal-tool-macros",
    "crates/legacy/universal-tool-integration-tests",

    # Meta
    "crates/meta/xtask",
]
exclude = [
    "crates/legacy/universal-tool-examples",
]

[workspace.dependencies]
# Shared core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
schemars = { version = "1", features = ["derive"] }

# Internal crates
agentic-tools-core = { version = "0.1.0", path = "crates/agentic-tools/core" }
agentic-tools-macros = { version = "0.1.0", path = "crates/agentic-tools/macros" }
agentic-tools-mcp = { version = "0.1.0", path = "crates/agentic-tools/mcp" }
agentic-tools-utils = { version = "0.1.0", path = "crates/agentic-tools/utils" }
agentic-tools-registry = { version = "0.2.0", path = "crates/agentic-tools/registry" }
agentic_logging = { version = "0.1.2", path = "crates/infra/agentic-logging" }
thoughts-tool = { version = "0.8.0", path = "crates/infra/thoughts-core" }
thoughts-mcp-tools = { version = "0.1.0", path = "crates/tools/thoughts-mcp-tools" }
coding_agent_tools = { version = "0.2.0", path = "crates/tools/coding-agent-tools" }
pr_comments = { version = "0.6.0", path = "crates/tools/pr-comments" }
gpt5_reasoner = { version = "0.6.0", path = "crates/tools/gpt5-reasoner" }
linear-tools = { version = "0.4.0", path = "crates/linear/tools" }
linear-schema = { version = "0.1.1", path = "crates/linear/schema" }
linear-queries = { version = "0.2.0", path = "crates/linear/queries" }
claudecode = { version = "0.1.10", path = "crates/services/claudecode-rs" }
anthropic-async = { version = "0.3.0", path = "crates/services/anthropic-async" }
opencode_rs = { version = "0.1.2", path = "crates/services/opencode-rs" }
universal-tool-core = { version = "0.2.6", path = "crates/legacy/universal-tool-core" }
universal-tool-macros = { version = "0.1.9", path = "crates/legacy/universal-tool-macros" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.3"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Build only the required packages, and individually
precise-builds = true
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# Custom tag pattern for release-plz format (see commit 023d153)
allow-dirty = ["ci"]
