[workspace]
resolver = "2"
members = [
    # Apps
    "apps/thoughts",
    "apps/agentic-mcp",

    # Bindings
    "bindings/node/agentic-tools-napi",

    # Agentic-tools family
    "crates/agentic-tools/core",
    "crates/agentic-tools/macros",
    "crates/agentic-tools/mcp",
    "crates/agentic-tools/utils",
    "crates/agentic-tools/registry",

    # Linear family
    "crates/linear/schema",
    "crates/linear/queries",
    "crates/linear/tools",

    # Services family
    "crates/services/anthropic-async",
    "crates/services/claudecode-rs",
    "crates/services/exa-async",
    "crates/services/opencode-rs",

    # Tools family
    "crates/tools/coding-agent-tools",
    "crates/tools/pr-comments",
    "crates/tools/gpt5-reasoner",
    "crates/tools/thoughts-mcp-tools",
    "crates/tools/web-retrieval",

    # Infra family
    "crates/infra/agentic-logging",
    "crates/infra/thoughts-core",

    # Legacy family
    "crates/legacy/universal-tool-core",
    "crates/legacy/universal-tool-macros",
    "crates/legacy/universal-tool-integration-tests",

    # Meta
    "crates/meta/xtask",
]
exclude = [
    "crates/legacy/universal-tool-examples",
]

[workspace.dependencies]
# Shared core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
schemars = { version = "1", features = ["derive"] }

# Internal crates
agentic-tools-core = { version = "0.1.0", path = "crates/agentic-tools/core" }
agentic-tools-macros = { version = "0.1.0", path = "crates/agentic-tools/macros" }
agentic-tools-mcp = { version = "0.1.0", path = "crates/agentic-tools/mcp" }
agentic-tools-utils = { version = "0.1.1", path = "crates/agentic-tools/utils" }
agentic-tools-registry = { version = "0.2.4", path = "crates/agentic-tools/registry" }
agentic_logging = { version = "0.1.2", path = "crates/infra/agentic-logging" }
thoughts-tool = { version = "0.8.1", path = "crates/infra/thoughts-core" }
thoughts-mcp-tools = { version = "0.1.1", path = "crates/tools/thoughts-mcp-tools" }
coding_agent_tools = { version = "0.2.3", path = "crates/tools/coding-agent-tools" }
pr_comments = { version = "0.6.2", path = "crates/tools/pr-comments" }
gpt5_reasoner = { version = "0.6.1", path = "crates/tools/gpt5-reasoner" }
linear-tools = { version = "0.4.1", path = "crates/linear/tools" }
linear-schema = { version = "0.1.1", path = "crates/linear/schema" }
linear-queries = { version = "0.2.0", path = "crates/linear/queries" }
claudecode = { version = "0.1.11", path = "crates/services/claudecode-rs" }
anthropic-async = { version = "0.5.0", path = "crates/services/anthropic-async" }
exa-async = { version = "0.1.0", path = "crates/services/exa-async" }
opencode_rs = { version = "0.2.0", path = "crates/services/opencode-rs" }
web-retrieval = { version = "0.1.3", path = "crates/tools/web-retrieval" }
universal-tool-core = { version = "0.2.6", path = "crates/legacy/universal-tool-core" }
universal-tool-macros = { version = "0.1.9", path = "crates/legacy/universal-tool-macros" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.3"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Build only the required packages, and individually
precise-builds = true
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# Custom tag pattern for release-plz format (see commit 023d153)
allow-dirty = ["ci"]

[workspace.lints.rust]
# unsafe_code = "warn"                # disabled; too noisy for this codebase
# unused_crate_dependencies = "warn"  # useful but can be noisy with dev-dependencies

[workspace.lints.clippy]
# ── Enable pedantic as a baseline ──────────────────────────
pedantic = { level = "warn", priority = -1 }

# Pedantic lints that are usually too noisy to keep:
cast_possible_truncation = "allow"   # too many legitimate truncations
cast_precision_loss = "allow"        # f64 from u64 is often fine
cast_sign_loss = "allow"             # often intentional
default_trait_access = "allow"       # String::default() vs Default::default() is taste
missing_errors_doc = "allow"         # tedious on internal code
missing_panics_doc = "allow"         # tedious on internal code
module_name_repetitions = "allow"    # config::ConfigError is natural
must_use_candidate = "allow"         # extremely noisy
struct_excessive_bools = "allow"     # sometimes you just need flags
too_many_lines = "allow"             # arbitrary; use judgment instead

# ── Cherry-picked restriction lints ────────────────────────
allow_attributes = "warn"            # prefer #[expect] over #[allow]
clone_on_ref_ptr = "warn"            # Arc::clone(&x) over x.clone()
create_dir = "warn"                  # prefer create_dir_all
dbg_macro = "warn"                   # no leftover dbg!()
exit = "warn"                        # no surprise process::exit
rest_pat_in_fully_bound_structs = "warn"
self_named_module_files = "warn"     # consistent module file layout
undocumented_unsafe_blocks = "warn"  # every unsafe needs a SAFETY comment
unused_result_ok = "warn"
unwrap_used = "warn"                 # ban .unwrap() - use ? or explicit handling
expect_used = "warn"                 # ban .expect() - use ? or explicit handling

# ── Cherry-picked nursery lints ────────────────────────────
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"       # too many false positives
significant_drop_tightening = "allow" # buggy
option_if_let_else = "allow"         # suggestions often less readable
suboptimal_flops = "allow"           # not always relevant

# ── Cargo lints ────────────────────────────────────────────
wildcard_dependencies = "warn"
# cargo_common_metadata = "warn"    # enable if publishing to crates.io
