[package]
name = "agentic-tools-core"
version = "0.1.0"
edition = "2024"
authors = ["Allison Durham"]
description = "Core traits and types for agentic-tools library family"
license = "MIT"
repository = "https://github.com/allisoneer/agentic_auxilary"

[dependencies]
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "2"
json-patch = "4"
rmcp = { version = "0.6.4", features = ["server", "transport-io"] }

[features]
default = []
inventory = ["dep:inventory"]

[dependencies.inventory]
version = "0.3"
optional = true
