[package]
name = "agentic_logging"
version = "0.1.1"
edition = "2024"
authors = ["Allison Durham"]
description = "Centralized JSONL logging infrastructure for agentic tools"
license = "MIT"
repository = "https://github.com/allisoneer/agentic_auxilary"
homepage = "https://github.com/allisoneer/agentic_auxilary"
keywords = ["logging", "jsonl", "mcp", "agentic"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
fd-lock = "4"
atomicwrites = "0.4"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
