[package]
name = "gpt5_reasoner"
version = "0.4.6"
edition = "2024"
authors = ["Claude <claude@anthropic.com>"]
description = "GPT-5 prompt optimization and execution tool with MCP and CLI interfaces"
license = "MIT"
repository = "https://github.com/allisoneer/agentic_auxilary"
homepage = "https://github.com/allisoneer/agentic_auxilary"
keywords = ["gpt-5", "reasoning", "mcp", "cli", "prompt"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
universal-tool-core = { version = "0.2.5", path = "../universal_tool/universal-tool-core", features = ["mcp"] }
thoughts-tool = { version = "0.5.1", path = "../thoughts_tool" }
agentic_logging = { version = "0.1.0", path = "../agentic_logging" }
async-openai = "0.29.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "0.8"
quick-xml = "0.31"
regex = "1"
tiktoken-rs = "0.5"
dotenvy = "0.15"
thiserror = "2.0.14"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
secrecy = "0.10"
walkdir = "2.5"

[[bin]]
name = "gpt5_reasoner"
path = "src/main.rs"

[lib]
name = "gpt5_reasoner"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
serial_test = "3"
