[package]
name = "pr_comments"
version = "0.1.0"
edition = "2024"
authors = ["Allison Durham"]
description = "Fetch GitHub PR comments via CLI and MCP"
license = "MIT"
repository = "https://github.com/allisoneer/agentic_auxilary"
homepage = "https://github.com/allisoneer/agentic_auxilary"
readme = "README.md"


[dependencies]
# Universal tool framework
universal-tool-core = { version = "0.1.2", features = ["cli", "mcp"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# GitHub API client
octocrab = "0.41"

# Git operations
git2 = { version = "0.18", features = ["vendored-openssl"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL parsing
url = "2"

[dev-dependencies]
# Testing
mockito = "1"
tempfile = "3"
