[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "xtask"
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1"
cargo_metadata = "0.18"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
