[package]
name = "agentic-mcp"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Unified MCP server for all agentic-tools"
repository = "https://github.com/allisoneer/agentic_auxilary"

[package.metadata.repo]
role = "app"
family = "agentic-tools"

[package.metadata.repo.integrations]
mcp = true
logging = false
napi = false

[dependencies]
agentic-tools-core = { workspace = true }
agentic-tools-mcp = { workspace = true }
agentic-tools-registry = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
tokio = { workspace = true }
anyhow = { workspace = true }
