[package]
name = "agentic-bin"
version = "0.1.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/allisoneer/agentic_auxilary"
description = "Agentic unified CLI for configuration management"
publish = true

[package.metadata.repo]
role = "app"
family = "tools"

[package.metadata.repo.integrations]
mcp = false
logging = false
napi = false

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/{name}-v{version}/{name}-{target}.tar.xz"
pkg-fmt = "txz"
bin-dir = "{name}-{target}/{bin}{binary-ext}"
disabled-strategies = ["quick-install", "compile"]

[[bin]]
name = "agentic"
path = "src/main.rs"

[dependencies]
agentic-config = { workspace = true }
agentic-tools-utils = { workspace = true }
clap = { workspace = true, features = ["env"] }
anyhow = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
colored = "2"
atomicwrites = { workspace = true }

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3"
serial_test = "3"
toml = "0.8"

[lints]
workspace = true
