[package]
name = "message-optimizer-bin"
version = "0.1.5"
edition = "2024"
license = "MIT"
description = "Standalone CLI for GPT-5.4 message optimization"
repository = "https://github.com/allisoneer/agentic_auxilary"

[package.metadata.repo]
role = "app"
family = "tools"

[package.metadata.repo.integrations]
mcp = false
logging = false
napi = false

[[bin]]
name = "message-optimizer"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
message_optimizer = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
