[package]
name = "thoughts-bin"
version = "0.1.11"
edition = "2024"
authors = ["Allison Durham"]
description = "CLI for flexible thought management using filesystem mounts"
license = "MIT"
repository = "https://github.com/allisoneer/agentic_auxilary"
publish = true

[package.metadata.repo]
role = "app"
family = "tools"

[package.metadata.repo.integrations]
mcp = false
logging = false
napi = false

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/{name}-v{version}/{name}-{target}.tar.xz"
pkg-fmt = "txz"
bin-dir = "{name}-{target}/{bin}{binary-ext}"
disabled-strategies = ["quick-install", "compile"]

[[bin]]
name = "thoughts"
path = "src/main.rs"

[dependencies]
thoughts-tool = { workspace = true }
agentic-tools-utils = { workspace = true }
clap = { workspace = true, features = ["env"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "time",
] }
colored = "3"
tokio = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2.1"
predicates = "3.1"
serial_test = "3"
git2 = "0.20"

[lints]
workspace = true
