[package]
name = "claude-auth"
version = "0.1.0"
edition = "2021"

[package.metadata.dist]
dist = false

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
base64 = "0.22"
keyring = { version = "3", features = ["sync-secret-service"] }
dirs = "6"
open = "5"
time = { version = "0.3", features = ["formatting", "parsing"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
url = "2"
hex = "0.4"
chacha20poly1305 = "0.10"
blake3 = "1"

[dev-dependencies]
tempfile = "3"
