[package]
name = "claude-core"
version = "0.1.0"
edition = "2021"

[package.metadata.dist]
dist = false

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
futures = "0.3"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

anthropic-async = { path = "../../anthropic_async", features = ["streaming"] }
claude-auth = { path = "../claude-auth" }
libsql = "0.6"
