[package]
name = "linear-queries"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Cynic queries and input types for Linear"
repository = "https://github.com/allisoneer/agentic_auxilary"

[dependencies]
cynic = { version = "3.12.0", features = ["rkyv"] }
linear-schema = { path = "../linear-schema", version = "0.1.0" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

[build-dependencies]
cynic-codegen = { version = "3.12.0", features = ["rkyv"] }
