[package]
name = "linear-schema"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Cached Linear GraphQL schema for cynic"
repository = "https://github.com/allisoneer/agentic_auxilary"

[dependencies]
cynic = { version = "3.4.3", features = ["rkyv"] }

[build-dependencies]
cynic-codegen = { version = "3.4.3", features = ["rkyv"] }
